# log-project

./: .gitignore  README.md  log-project.cabal  stack.yaml
app/: Main.hs
docs/: log.txt
src/: Log.hs  LogParser.hs  Utilities.hs
test/: Spec.hs
