cabal-version:          2.2
name:                   log-project
version:                0.1.0.0
description:            Please see the README on GitHub at <https://github.com/MorveN11/log-project#readme>
homepage:               https://github.com/MorveN11/log-project#readme
author:                 Manuel Morales
maintainer:             morales.patty.jose@gmail.com
copyright:              2024 Manuel Morales
license:                BSD-3-Clause
license-file:           LICENSE
build-type:             Simple
extra-source-files:     README.md

source-repository head
    type:               git
    location:           https://github.com/MorveN11/log-project

common configuration
    ghc-options:        -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
    build-depends:      base >= 4.7 && < 5
    default-language:   Haskell2010

common executable-configuration
    ghc-options:        -threaded
                        -rtsopts
                        -with-rtsopts=-N
    build-depends:      log-project

library
    import:             configuration
    exposed-modules:    Lib
    hs-source-dirs:     src

executable log-project-exe
    import:             configuration,
                        executable-configuration
    main-is:            Main.hs
    hs-source-dirs:     app

test-suite log-project-test
    import:             configuration,
                        executable-configuration
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
